gcc/testsuite/rust/rustc/ui/test-attrs/issue-109816_dg.rs
//@ compile-flags: --test

fn align_offset_weird_strides() {
    #[test]
// { dg-error "" "" { target *-*-* } .-1 }
    struct A5(u32, u8);
}

